--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,12 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<h1>Create a new cocktail</h1>
 
-<%= simple_form_for(@cocktail) do |f| %>
-  <%= f.input :name %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container">
+  <div class="form">
+    <%= simple_form_for(@cocktail) do |f| %>
+      <%= f.input :rollout_id, :label => false, wrapper_html: {class: "form-inline"} do %>
+        <%= f.input :name, placeholder: "Name", label: false, input_html: { class: 'form-input inline-input' } %>
+        <%= f.button :submit, class: "form-submit inline-submit" %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
