--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
   <body>
-    <%= yield %>
-    <%= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
+    <div class="navbar-lewagon fixed-top">
+      <h1>
+        <i class="fas fa-cocktail"></i>
+        <%= link_to "Mister Cocktail", cocktails_path, class: "logo" %>
+      </h1>
+      <%= link_to "Add a Cocktail", new_cocktail_path, class: "btn btn-primary" %>
+    </div>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
