Add dotenv - Protect my secret data in .env file

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <% @cocktails.each do |cocktail| %>
         <div class="card-container col-lg-3 col-md-4 col-sm-6">
-            <%= link_to cocktail.name, cocktail_path(cocktail), {class: "card-category", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(#{image_path "cocktail_#{cocktail.id}.jpg"}); background-size: cover;"}  %>
+            <%= link_to cocktail.name, cocktail_path(cocktail), {class: "card-category", style: "background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(#{cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill}); background-size: cover;"}  %>
         </div>
       <% end %>
     </div>
