--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style='height: 350px; background-image: url(<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>); background-size: cover; background-position: center;'></div>
+<div class="banner" style='height: 500px; background-image: url(<%= cl_image_path @cocktail.photo.key, crop: :fill %>); background-size: cover; background-position: center;'></div>
 <div class="container">
   <% if !@cocktail.doses.empty? %>
     <div class="ingredients-list">
