--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <div class="navbar-lewagon fixed-top">
       <h1>
         <i class="fas fa-cocktail"></i>
-        <%= link_to "Mister Cocktail", cocktails_path, class: "logo" %>
+        <%= link_to "Mister Cocktail", root_path, class: "logo" %>
       </h1>
       <%= link_to "Add a Cocktail", new_cocktail_path, class: "btn btn-primary" %>
     </div>
