--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -15,6 +15,15 @@
   margin-top: 20px;
 }
 
+.form-control {
+  height: 50px;
+  border-radius: 8px;
+  border: none;
+  padding: 0 20px;
+  width: 100%;
+  margin-top: 20px;
+}
+
 .inline-input {
   margin-top: 0;
 }
@@ -49,4 +58,13 @@
 
 .select2 {
   height: 50px;
+}
+
+.photo-input {
+  padding-left: 0;
+  border-radius: 0;
+}
+
+input .photo-input {
+  border-radius: 2px;
 }
