--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -36,3 +36,37 @@ $navbar-height: 75px;
 .padding-blank {
   height: ($navbar-height + 20px);
 }
+
+.navbar-lewagon > .search {
+  flex-grow: 1;
+  padding: 0 50px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-lewagon > .search > form {
+  height: 60%;
+  width: 100%;
+}
+
+.navbar-lewagon > .search > form > .search-bar {
+  width: 90%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  height: 100%;
+  padding: 0 30px;
+}
+
+.navbar-lewagon > .search > form > .search-submit {
+  width: 10%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  height: 99%;
+}
