--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -5,7 +5,7 @@
     <div class="form">
       <%= simple_form_for(@cocktail) do |f| %>
         <%= f.input :name, placeholder: "Name", label: false, input_html: { class: 'form-input' } %>
-        <%= f.input :photo, as: :file %>
+        <%= f.input :photo, as: :file, label: false, input_html: { class: 'form-input photo-input' } %>
         <%= f.button :submit, class: "form-submit" %>
       <% end %>
     </div>
