--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,26 +1,26 @@
-<div class="banner" style='height: 500px; background-image: url(<%= cl_image_path @cocktail.photo.key, crop: :fill %>); background-size: cover; background-position: center;'></div>
+<div class="banner" style='height: 500px; background-image: linear-gradient(0deg, rgba(21,21,21,1) 0%, rgba(21,21,21,0) 100%), url(<%= cl_image_path @cocktail.photo.key, crop: :fill; %>); background-size: cover; background-position: center;'></div>
 <div class="container">
   <% if !@cocktail.doses.empty? %>
     <div class="ingredients-list">
-      <h1>The recipe to a <font color="#FB9F89"><%= @cocktail.name %></font></h1>
-      <ul>
+      <h1>The recipe to a great <font color="#FB9F89"><%= @cocktail.name %></font></h1>
+      <ol>
       <% @cocktail.doses.each do |dose| %>
-      <li><%= "#{dose.description} of #{dose.ingredient.name} • "%><%= link_to dose_path(dose), method: :delete  do %>
-        <i class="fas fa-trash"></i>
+      <li><strong><%= dose.ingredient.name %></strong><%= ": #{dose.description}"%><%= link_to dose_path(dose), method: :delete  do %>
+        &nbsp&nbsp&nbsp&nbsp&nbsp<i class="fas fa-times-circle"></i>
       <% end %>
       </li>
       <% end %>
-      </ul>
+      </ol>
     </div>
   <% else %>
-    <h1>This cocktail as no recipe yet...</h1>
+    <h1>This cocktail has no recipe yet...</h1>
   <% end %>
 
   <h3>Add a new ingredient:</h3>
   <div class="form">
     <%= simple_form_for [@cocktail, @dose] do |f| %>
       <%= f.input :description, placeholder: "Description", label: false, input_html: { class: 'form-input' } %>
-      <%= f.association :ingredient, label: false, prompt: 'Select Ingredient', input_html: { class: 'form-input' } %>
+      <%= f.association :ingredient, collection: Ingredient.order('name'), label: false, prompt: 'Select Ingredient', input_html: { class: 'form-input' } %>
       <%= f.button :submit, class: "form-submit" %>
     <% end %>
   </div>
