--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <div class="navbar-lewagon fixed-top">
-      <%= link_to image_tag('logo', style: "width: 300px;"), root_path %>
+      <%= link_to image_tag('logo.png', style: "width: 300px;"), root_path %>
       <div class="search">
         <form action="<%= root_path %>">
           <input type="text" name="query" class="search-bar"><button type="submit" class="search-submit" value="search"><i class="fas fa-search"></i></button>
