--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -70,3 +70,31 @@ $navbar-height: 75px;
   border-bottom-right-radius: 8px;
   height: 99%;
 }
+
+.logo {
+  width: 300px
+}
+
+@media (max-width: 768px) {
+  $navbar-height: 200px;
+  .navbar-lewagon {
+    flex-direction: column;
+    align-items: center;
+    height: $navbar-height
+  }
+  .navbar-lewagon > .search {
+    width: 100%;
+    flex-grow: 0;
+    height: 75px;
+  }
+  .navbar-lewagon > .search > form > .search-submit {
+    height: 100%;
+  }
+  .btn-primary {
+    width: 100%;
+    height: 40px;
+  }
+  .padding-blank {
+    height: ($navbar-height + 20px);
+  }
+}
