--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style='height: 500px; background-image: linear-gradient(0deg, rgba(21,21,21,1) 0%, rgba(21,21,21,0) 100%), url(<%= cl_image_path @cocktail.photo.key, crop: :fill; %>); background-size: cover; background-position: center;'></div>
 <div class="container">
   <% if !@cocktail.doses.empty? %>
-    <div class="ingredients-list">
+    <div class="ingredients-list col-lg-9 col-md-12 col-sm-12">
       <h1>The recipe to a great <font color="#FB9F89"><%= @cocktail.name %></font></h1>
       <ol>
       <% @cocktail.doses.each do |dose| %>
