--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -93,6 +93,7 @@ $navbar-height: 75px;
   .btn-primary {
     width: 100%;
     height: 40px;
+    margin-bottom: 20px;
   }
   .padding-blank {
     height: ($navbar-height + 20px);
