--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,6 @@
       <%= link_to "Add a Cocktail", new_cocktail_path, class: "btn btn-primary" %>
     </div>
     <%= yield %>
+    <div class="footer"></div>
   </body>
 </html>
