responsive submit button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,6 @@
       <%= link_to "Add a Cocktail", new_cocktail_path, class: "btn btn-primary" %>
     </div>
     <%= yield %>
-    <div class="footer"></div>
+    <div class="padding-blank"></div>
   </body>
 </html>
