--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -14,3 +14,11 @@
     color: $green;
   }
 }
+
+@media (max-width: 768px) {
+  .btn-primary {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+  }
+}
